--- a/templates/starter_kit_base.html
+++ b/templates/starter_kit_base.html
@@ -6,6 +6,9 @@
 {% block site_title %}Your Application Name{% endblock site_title %}
 
 {% block extra_head_top %}
+  {% compress js %}
+    <script type="text/javascript" src='/static/javascripts/rollbar.js'></script>
+  {% endcompress %}
   {% compress css %}
     <link rel="stylesheet" href="static/scss/compiled_css/custom.css" type="text/css" charset="utf-8">
   {% endcompress %}
