Started adding static file management to readme. Also updated some settings files.

--- a/templates/starter_kit_base.html
+++ b/templates/starter_kit_base.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src='{% static 'javascripts/rollbar.js' %}'></script>
   {% endcompress %}
   {% compress css %}
-    <link rel="stylesheet" href='{% static 'scss/compiled_css/custom.css' %}' type="text/css" charset="utf-8">
+    <link rel="stylesheet" href='{% static 'stylesheets/custom.css' %}' type="text/css" charset="utf-8">
   {% endcompress %}
 {% endblock extra_head_top %}
 
