added basic unit tests and instructions

--- a/templates/MockView/mock_view_page.html
+++ b/templates/MockView/mock_view_page.html
@@ -1,2 +1,31 @@
-<!-- An example template for testing -->
+<!-- An example template for teaching test driven development -->
+<title>Mock</title>
+<h1>Get started with Test Driven Development</h1>
+
+<p>
+	This page is here to help you get you up and running with unit testing.
+
+	You need to send a post request to this page, that will show up in the Output box below. 
+
+	Go to the <i>django_starter_kit/test.py</i> fie and look at the <i>test_mock_page_output_message</i> function. What is it looking for, and how do you get it to show up in the template?
+
+	start by running the following command in the command line 
+	<div>
+	python -Wi manage.py test django_starter_kit/
+	</div>
+
+	For more information look at the <i>mock_view_page.html</i> template and the <i>views.py</i> file in the django_starter_kit app. 
+
+
+
+
+</p>
+
+<div>
+	<p> Output: </p>
+
+</div>
+
+
+
 
