Updating test_view_page.html to use base theme

--- a/templates/test_view/test_view_page.html
+++ b/templates/test_view/test_view_page.html
@@ -1,19 +1,25 @@
-<!-- An example template for teaching test driven development -->
-{% load bootstrap3 %}
-{% bootstrap_css %}
+{% extends "starter_kit_base.html" %}
+{% load staticfiles %}
+{% load compress %}
 
-<title>Unit Testing</title>
+{% block breadcrumb %}
+<li><a href="/">Home</a></li>
+<li class="active">TDD Example</li>
+{% endblock breadcrumb %}
 
-<div class="container">
-	<div class="row">
-		<div class="col-lg-12">
-			<div class="page-header"><h1>Get started with Test Driven Development</h1></div>
-			<p>
-				This page is here to help you get you up and running with unit testing. You need to send a post request to this page, that will show up in the Output box below. Go to the <i>django_starter_kit/test.py</i> file and look at the <code>test_page_output_message</code> function. What is it looking for, and how do you get it to show up in the template?
-			</p>
-			<p>start by running the following command in the command line: <pre>python -Wi manage.py test django_starter_kit/</pre></p>
-			<p>For more information look at the <i>test_view_page.html</i> template and the <i>views.py</i> file in the django_starter_kit app.</p>
-			<p> Output: </p>			
-		</div>
-	</div>
-</div>
+{% block left_sidebar %}{% endblock left_sidebar %}
+{% block inner_content %}
+<div class="col-md-12">
+	<h1>Get started with Test Driven Development</h1>
+		<section id="unit-testing">
+		  <header class="visuallyhidden">Get started with Test Driven Development</header>
+		  <h3>Unit Testing</h3>
+				<p>This page is here to help you get you up and running with unit testing. You need to send a post request to this page, that will show up in the Output box below. 
+					 Go to the <i>django_starter_kit/test.py</i> file and look at the <code>test_page_output_message</code> function. 
+					 What is it looking for, and how do you get it to show up in the template?</p>
+				<p>Start by running the following command in the command line: <pre>python -Wi manage.py test django_starter_kit/</pre></p>
+				<p>For more information look at the <i>test_view_page.html</i> template and the <i>views.py</i> file in the django_starter_kit app.</p>
+				<p>Output:</p>			
+		</section><!-- end section -->
+</div><!-- end col-md-12 -->
+{% endblock inner_content %}
