updating banner title id in the example template

--- a/templates/starter_kit_base.html
+++ b/templates/starter_kit_base.html
@@ -14,7 +14,7 @@
   {% endcompress %}
 {% endblock extra_head_top %}
 
-{% block banner_title %}<div id="title">Your Application Name</div>{% endblock banner_title %}
+{% block banner_title %}<div id="banner__title">Your Application Name</div>{% endblock banner_title %}
 
 {% block extra_footer_js %}
   {% compress js %}
