Updated project to be easier to understand :)

--- a/templates/starter_kit_base.html
+++ b/templates/starter_kit_base.html
@@ -18,8 +18,8 @@
 
 {% block extra_footer_js %}
   {% compress js %}
-    <!-- Vendor Files --> 
-    <script type="text/javascript" src='{% static 'javascripts/vendor.js' %}'></script>
+    <!-- Vendor Files -->
+    <!-- <script type="text/javascript" src='{% static 'javascripts/vendor.js' %}'></script> -->
 
     <!-- Project Files -->
     <!-- Examples (would be generated from gulp eco, coffee, and javascript commands)
